--- a/index.html
+++ b/index.html
@@ -8,27 +8,22 @@
   <meta charset="UTF-8">
   <title>Profile</title>
 </head>
-<body>
+<body class ="container">
   <div id="img">
     <img src="images/profielbild.jpg" alt="profile picture">
   </div>
   <div>
-    <h1 class="header">  Jakob Habsburg </h1>
-  </div>
-  <div>
-    <a class="text "href=“#”>Example</a>
-  </div>
-  <div>
-    <h2 class = "text">Occupation: Student</h2>
-  </div>
-  <div>
-    <h2 class = "text">I am 18 years old, I like to play basketball and I am from Berlin </h2>
+    <h1 class="header">  Jakob Habsburg</h1>
+    <h2 class = "text">I am 18 years old1️⃣8️⃣</h2>
+    <h2 class = "text">I like to play basketball🏀</h2>
+    <h2 class = "text">I am from Berlin, but my family is originally from Austria🇩🇪🇦🇹</h2>
   </div>
   <div>
     <ul>
-      <a class="icon"><i class="fab fa-github"></i></a>
-      <a class="icon"><i class="fab fa-facebook"></i></a>
-      <a class="icon"><i class="fab fa-twitter"></i></a>
+      <h2 class = "text">CHECK OUT MY SOCIAL MEDIA!</h2>
+      <a href="https://github.com/JHabsburg" class="icon"><i class="fab fa-github"></i></a>
+      <a href="https://www.facebook.com/" class="icon"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/jakob.habsburg/" class="icon"><i class="fab fa-instagram"></i></a>
     </ul>
   </div>
 </body>
